--- a/aulas/aula05/teste.html
+++ b/aulas/aula05/teste.html
@@ -8,7 +8,14 @@
   <body>
     <script>
    
-      let vetor = [] // usar flag
+          let vetor = []
+         
+          for(let i = 0; i < 8; i++) {
+          }
+
+
+
+          
 
    </script>
  </body>
