--- a/aulas/aula25/exercicio2.html
+++ b/aulas/aula25/exercicio2.html
@@ -7,7 +7,7 @@
     <title>Exercicio2</title>
 </head>
 <body>
-    <h1 class="titulo"><strong>FONTES:</strong></h1> 
+    <h1><strong>FONTES:</strong></h1> 
 
     <p class="paragrafoVerde"> "No mundo dos negocios todos são pagos com duas <br> 
      moedas: Dinheiro e Experiencia...  Agarre a experiencia <br>
@@ -15,5 +15,13 @@
      
     </p>
 
+    <p class="paragrafoVermelho"> <big> "Há homens que lutam um dia e são bons. <br>
+    Há outros que lutam muitos dias e são melhores. <br>
+    <span class="linhaAzul">Mas há os que lutam todos os dias e estes são imprecendíveis."
+    <br>
+    <br>
+    --Bertold Brecht</span>
+    </big>
+    </p>
 </body>
 </html>
