trabalhando no site

--- a/aulas/aula27/siteStelar/index.html
+++ b/aulas/aula27/siteStelar/index.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/css/index.css">
     <title>Site Stellar</title>
 </head>
 <body>
+   
     <header>
         <img src="static/img/logo.svg" alt="logo do site">
         
         <h1>Stellar</h1>
-        <p>
+        <p class="bela">
            Just another free, fully responsive site template
            <br>
            built by <a href="#">@ajlkn</a> for <a href="#">HTML5</a> UP.
         </p>
-    </header>
+      </header>
+   
+   
+    <div class="wrapper">
+      
 
     <nav>
         <ul>
@@ -291,6 +297,6 @@
     </footer>
 
 
-
+     </div>
 </body>
 </html>
