--- a/aulas/aula27/siteStelar/index.html
+++ b/aulas/aula27/siteStelar/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
    
-    <header>
-        <img src="static/img/logo.svg" alt="logo do site">
+    <header class="head">
+        <img src="static/img/logo.svg" alt="logo do site"> 
         
         <h1>Stellar</h1>
         <p class="bela">
-           Just another free, fully responsive site template
+          <small> Just another free, fully responsive site template
            <br>
-           built by <a href="#">@ajlkn</a> for <a href="#">HTML5</a> UP.
+           built by <a href="#" class="acolor">@ajlkn</a> for <a href="#" class="acolor">HTML5</a> UP. </small>
         </p>
       </header>
    
@@ -26,16 +26,16 @@
     <nav>
         <ul>
           <li>
-              <a href="#intro" class="active">Introduction</a>
+              <a href="#intro" class="botao">Introduction</a>
           </li>
           <li>
-              <a href="#first" class>First Section</a>
+              <a href="#first" >First Section</a>
           </li>
           <li>
-              <a href="#second" class>Second Section</a>
+              <a href="#second" >Second Section</a>
           </li>
           <li>
-              <a href="#cta"class>Get Started</a>
+              <a href="#cta">Get Started</a>
           </li>
         </ul>
     </nav>
