--- a/aulas/aula27/siteStelar/index.html
+++ b/aulas/aula27/siteStelar/index.html
@@ -46,7 +46,7 @@
              <div class="content">
          <header>
              <h2 class="titulo1">
-                Ipsum sed adipiscing <br> aula 28 ver da linha 
+                Ipsum sed adipiscing <br>  
              </h2>
          </header>
          
@@ -71,9 +71,8 @@
 
      <section #fisrt.main.special id="first" class="main special">
           <header class="major">
-              <h2>
+              <h2 class="ti2"> 
                 Magna veroeros <br>
-                <strong>_________________</strong>
               </h2>
          </header>
 
