--- a/aulas/Trabalho/SiteViagem/Vigem.html
+++ b/aulas/Trabalho/SiteViagem/Vigem.html
@@ -11,7 +11,7 @@
    <header class="head">
     <div>
       <h1 class="titulo">
-          Top 5 lugares ara vistar após covid-19
+          Top 5 lugares para vistar após covid-19
       </h1>
     </div>   
 
