--- a/aulas/Trabalho/SiteViagem/Vigem.html
+++ b/aulas/Trabalho/SiteViagem/Vigem.html
@@ -31,7 +31,7 @@
              
               <li> <img src="static/img/casas bahia.jpg" alt="casas">  </li>
              
-              <li> <img src="static/img/103_503504322.jpg" alt=""> </li>
+              <li> <img src="static/img/103_503504322.jpg" alt="subway"> </li>
           </ul>
       </div>
 
