--- a/aulas/Trabalho/SiteViagem/index.html
+++ b/aulas/Trabalho/SiteViagem/index.html
@@ -18,7 +18,17 @@
     <div class="linkRedes">
 
     </div>
+
+    
    </header> 
+   <div class="listaitens">
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 
    <main>
       <div>
