--- a/aulas/Trabalho/SiteViagem/index.html
+++ b/aulas/Trabalho/SiteViagem/index.html
@@ -75,11 +75,11 @@
   <div class="dropdown">
     <button class="dropbtn">ITENS PARA VIAGEM</button>
     <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
-    <a href="#">Link 5</a>
+    <a href="carteira.html">Carteiras</a>
+    <a href="binoculos.html">Binóculos</a>
+    <a href="espreiDePimenta.html">Spray de pimenta</a>
+    <a href="guardaChuva.html">Guarda Chuvas</a>
+    <a href="mochila.html">Mochilas</a>
     </div>
   </div>
   
@@ -103,10 +103,6 @@
 
     </main>
   </div>
-
-
-
-
 
 </body>
 </html>
