--- a/aulas/Trabalho/SiteViagem/espreiDePimenta.html
+++ b/aulas/Trabalho/SiteViagem/espreiDePimenta.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="static/css/pimenta.css">
+    <title>sprayDePimenta</title>
 </head>
 <body>
     <h1>
-        Melhores mochilas aqui! 
+        Melhores Spray De Pimenta aqui! 
     </h1>
+    <div class="dropdown">
+        <button class="dropbtn">VEJAS OS MELHORES PREÇOS</button>
+        <div class="dropdown-content">
+        <a href="https://produto.mercadolivre.com.br/MLB-1829479838-2-paralisante-uso-militar-seguranca-110ml-police-_JM?matt_tool=93076756&matt_word=&matt_source=google&matt_campaign_id=12409030710&matt_ad_group_id=115484581342&matt_match_type=&matt_network=g&matt_device=c&matt_creative=500429796856&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=392543407&matt_product_id=MLB1829479838&matt_product_partition_id=316266735085&matt_target_id=aud-879604627128:pla-316266735085&gclid=CjwKCAjw8cCGBhB6EiwAgOReywxQYdMkd40vTW7TO67Hn4BQLQa26Jdw-L9KPXkNrFh58W5y-eoHIhoCV0IQAvD_BwE">  Mercado livre</a>
+        <a href="https://shopee.com.br/Defesa-pesssoalNATO-60ml-extra-forte--i.325163849.3360735889?gclid=CjwKCAjw8cCGBhB6EiwAgOReywrO7_cklzhUrgx4eNFN6qcEEfA4RsuEHEo_6OfaBmqtSxeLmJhcjRoCcsgQAvD_BwE">Loja shopee</a>
+        <a href="https://produto.mercadolivre.com.br/MLB-1861986735-paralisante-uso-militar-seguranca-110ml-black-_JM?matt_tool=93076756&matt_word=&matt_source=google&matt_campaign_id=12409030710&matt_ad_group_id=115484581342&matt_match_type=&matt_network=g&matt_device=c&matt_creative=500429796856&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=338125906&matt_product_id=MLB1861986735&matt_product_partition_id=316266735085&matt_target_id=aud-879604627128:pla-316266735085&gclid=CjwKCAjw8cCGBhB6EiwAgORey1kjtWbW4SYlGaahKC8ERTVG5_wGwAX4EpYVJ1K0zfm9JSHQ8vcncRoCdToQAvD_BwE">  Mercado livre</a>
+       
+        </div>
+      </div>
+
 
     <div> 
        <ul> <img src="static/img/spray.jpg" alt="sprayDePimenta"> </ul>
+       <h2>Para sua proteção!</h2>
+
     </div>
     
-    <nav>
-       <ul>
-           <li><a href="#"></a></li>
-           <li><a href="#"></a></li>
-           <li><a href="#"></a></li>
-       </ul>
-   </nav>
 
 </body>
 </html>
